--- a/composer.json
+++ b/composer.json
@@ -5,21 +5,20 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.4.1",
-        "kmlaravel/laravel-geographical-calculator": "^2.0",
-        "laravel/framework": "^8.76",
-        "laravel/sanctum": "^2.13",
-        "laravel/tinker": "^2.6"
+        "php": "^8.0.2",
+        "guzzlehttp/guzzle": "^7.4",
+        "kmlaravel/laravel-geographical-calculator": "^2.2",
+        "laravel/framework": "^9.26",
+        "laravel/sanctum": "^2.15.1",
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
-        "facade/ignition": "^2.17",
-        "fakerphp/faker": "^1.17.0",
-        "laravel/sail": "^1.12.12",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
-        "phpunit/phpunit": "^9.5.10"
+        "fakerphp/faker": "^1.20.0",
+        "laravel/sail": "^1.15.4",
+        "mockery/mockery": "^1.5.0",
+        "nunomaduro/collision": "^6.2",
+        "phpunit/phpunit": "^9.5.23",
+        "spatie/laravel-ignition": "^1.4"
     },
     "autoload": {
         "psr-4": {
